Hopefully fixed footer on mobile

--- a/assets/styles/common.css
+++ b/assets/styles/common.css
@@ -6,7 +6,7 @@ html, body {
 
 .license-footer {
     position: fixed;
-    bottom: 0;
+    top: calc(100dvh - 50px);
     height: 50px;
     width: 100%;
 
@@ -29,5 +29,5 @@ html, body {
     border: 2px solid #222323;
     padding: 10px 10px 5px 10px;
     margin: 5px;
-    display: inline-block
+    display: inline-block;
 }
